// Gradle이 빌드되기 전에 실행되는 설정
buildscript {
    ext {
        springBootVersion = '3.1.3'
        dependencyManagementVersion = '1.1.3'
        projectVersion = '0.0.1-SNAPSHOT'

        lombokVersion = '1.18.26'
        slf4jVersion = '2.0.7'
        h2DatabaseVersion = '2.1.214'
        mockitoVersion = '5.2.0'
        moduleDependencyGraph = '0.12'
        springKafkaVersion = '3.0.5'
        jacksonDatabindVersion = '2.15.2'
        springTxVersion = '6.0.11'
        springDocVersion = '2.0.2'
    }

    repositories {
        maven { url "https://plugins.gradle.org/m2/" }
    }

    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath "io.spring.gradle:dependency-management-plugin:${dependencyManagementVersion}"
        // module-dependency-graph
        classpath "com.savvasdalkitsis:module-dependency-graph:${moduleDependencyGraph}"
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version "${dependencyManagementVersion}"
    id 'com.savvasdalkitsis.module-dependency-graph' version "${moduleDependencyGraph}"
}

group = 'me.jincrates.ecommerce'
version = "${projectVersion}"
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    // mockito
    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
}

// 현재의 Root 프로젝트와 앞으로 추가될 서브 모듈에 대한 설정
allprojects {}

// 전체 서브 모듈 공통 세팅
subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    group = 'me.jincrates.ecommerce'
    version = "${projectVersion}"
    sourceCompatibility = '17'

    repositories {
        mavenCentral()
    }

    dependencies {
        implementation "org.slf4j:slf4j-api:${slf4jVersion}"

        // lombok
        compileOnly "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

        // mockito
        testImplementation "org.mockito:mockito-core:${mockitoVersion}"
    }

    test {
        useJUnitPlatform()
    }
}
